Footer width corrected, Firefox scrollbar hidden

--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -6,7 +6,7 @@
   flex-direction: column;
   align-items: center;
   background-color: #f1e8f9;
-  width: 100vw;
+  /* width: 100vw; */
 }
 
 .footer h3 {
